Creating connection to the database

--- a/RestWithAspNet/RestWithAspNet/appsettings.json
+++ b/RestWithAspNet/RestWithAspNet/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "MySqlConnection": {
+    "MySqlConnectionString":  "Server=localhost;DataBase=Rest_with_asp_net;Uid=root;Pwd=Ib8nvkfx@"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
